--- a/.cargo/config
+++ b/.cargo/config
@@ -1,2 +1,6 @@
 [target.x86_64-unknown-linux-gnu]
 linker = "g++"
+
+#[target.x86_64-pc-windows-gnu]
+#linker = "/opt/homebrew/bin/x86_64-w64-mingw32-gcc"
+#ar = "/opt/homebrew/bin/x86_64-w64-mingw32-ar"
