--- a/tesseract-static-build/Cargo.toml
+++ b/tesseract-static-build/Cargo.toml
@@ -17,3 +17,6 @@ fs_extra = "1.3.0"
 flate2 = "1.0.25"
 tar = "0.4.38"
 reqwest = { version = "0.11.14", features = ["blocking"] }
+
+[build-dependencies]
+bindgen = "0.68.1"
