--- a/tesseract-static-example/Cargo.toml
+++ b/tesseract-static-example/Cargo.toml
@@ -14,6 +14,8 @@ publish = false
 
 [dependencies]
 tesseract-static = { path = "../tesseract-static" }
+rayon = "1.7.0"
 
 [build-dependencies]
 tesseract-static-build = { path = "../tesseract-static-build" }
+bindgen = "0.68.1"
